<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/topBar"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/titleIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_back_30dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:padding="5dp"
            android:layout_margin="-5dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"/>

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/endIcon"
            android:layout_toEndOf="@id/titleIcon"
            android:text="@string/images"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:textSize="@dimen/_22sdp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/endIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:layout_margin="-5dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:srcCompat="@drawable/ic_help_30dp"/>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topBar"
        android:layout_above="@id/doneText"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="20dp"
                app:srcCompat="@drawable/ic_photo_24dp"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/proximanovaregular"
                android:text="@string/add_images"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/add_image"
                android:textColor="@color/green"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:scrollbarStyle="outsideOverlay"
                android:id="@+id/horizontalScroll"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:clipToPadding="false"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:paddingStart="8dp"
                android:paddingEnd="0dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:id="@+id/imageContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>

            </HorizontalScrollView>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/doneText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="24sp"
        android:elegantTextHeight="true"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerInParent="true"
        style="@style/Widget.AppCompat.ProgressBar"/>

</RelativeLayout>
